# MemOS

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dump.rdb  pyproject.toml
.github/: CONTRIBUTING  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: python-release.yml  python-tests.yml  stale.yml
docker/: .env.example  Dockerfile  docker-compose.yml  requirements-full.txt  requirements.txt
docs/: README.md  openapi.json  product-api-tests.md  settings.yml
docs/best_practice/: common_errors_solutions.md  memory_structure_design.md  network_workarounds.md  performance_tuning.md
docs/contribution/: commit_guidelines.md  development_workflow.md  overview.md  setting_up.md  writing_docs.md  writing_tests.md
docs/getting_started/: examples.md  quick_start.md  your_first_memory.md
docs/home/: architecture.md  core_concepts.md  memos_intro.md  overview.md
docs/modules/: mem_cube.md  mem_reader.md  mem_scheduler.md
docs/modules/memories/: general_textual_memory.md  kv_cache_memory.md  neo4j_graph_db.md  parametric_memory.md  tree_textual_memory.md
docs/modules/mos/: overview.md  users.md  users_configurations.md
evaluation/: .env-example  README.md
evaluation/configs-example/: mem_cube_config.json  mos_memos_config.json
evaluation/data/locomo/: locomo10.json  locomo10_rag.json
evaluation/scripts/: run_lme_eval.sh  run_locomo_eval.sh  run_longbench_v2_eval.sh  run_openai_eval.sh  run_pm_eval.sh  run_prefeval_eval.sh  run_rag_eval.sh
evaluation/scripts/PrefEval/: irrelevant_conv.py  pref_eval.py  pref_mem0.py  pref_memobase.py  pref_memos.py  pref_memu.py  pref_supermemory.py  pref_zep.py  prefeval_preprocess.py
evaluation/scripts/locomo/: locomo_eval.py  locomo_ingestion.py  locomo_metric.py  locomo_openai.py  locomo_rag.py  locomo_responses.py  locomo_search.py  openai_memory_locomo_eval_guide.md  prompts.py
evaluation/scripts/long_bench-v2/: __init__.py  longbench_v2_ingestion.py  longbench_v2_ingestion_async.py  longbench_v2_metric.py  longbench_v2_responses.py  longbench_v2_search.py  wait_scheduler.py
evaluation/scripts/longbench/: __init__.py  (+4 more)
examples/api/: product_api.py  server_router_api.py
examples/basic_modules/: 2.json  batchImport_polardbFromJson.py  chunker.py  embedder.py  importPolarDbEdge.py  import_polardb_incr.py  llm.py  nebular_example.py  neo4j_example.py  neo4j_search.py  parseJson.py  parser.py  polardb_example.py  polardb_export_insert.py  polardb_search.py  qdrant_vec_db.py  reranker.py  textual_memory_internet_search_example.py  tree_textual_memory_reasoner.py  tree_textual_memory_recall.py  tree_textual_memory_relation_reason_detector.py  tree_textual_memory_reranker.py  tree_textual_memory_task_goal_parser.py
examples/core_memories/: general_textual_memory.py  kv_cache_memory.py  naive_textual_memory.py  textual_internet_memoy.py  tree_textual_memory.py  vllm_kv_cache_memory.py
examples/mem_agent/: deepsearch_example.py
examples/mem_api/: pipeline_test.py
examples/mem_chat/: chat_w_generated_cube_explicit_memory_only.py  simple_mem_chat.py
examples/mem_chunk/: markdown_chunk.py
examples/mem_cube/: load_from_folder.py  load_from_remote.py  load_lazily.py
examples/mem_mcp/: simple_fastmcp_client.py  simple_fastmcp_serve.py
examples/mem_os/: chat_w_generated_cube_explicit_memory.py  chat_w_scheduler.py  cot_usage_example.py  easy_memos.py  locomo_shared_database_memos.py  multi_user_memos_example.py  naive_memos.py  persistent_memos_example.py  simple_memos.py  simple_openapi_memos.py  simple_openapi_memos_neo4j_community.py  simple_prefs_memos_product.py  simple_treekvcache_memos.py  simple_vllm_memos.py
examples/mem_reader/: compare_simple_vs_multimodal.py  multimodal_struct_reader.py  multimodel_struct_reader.py  reader.py  simple_struct_reader.py  text1.txt  text2.txt
examples/mem_scheduler/: api_w_scheduler.py  debug_text_mem_replace.py  eval_for_scheduler.py  memos_w_optimized_scheduler.py  memos_w_optimized_scheduler_for_test.py  memos_w_scheduler.py  memos_w_scheduler_for_test.py  orm_examples.py  quick_start_examples.py  rabbitmq_example.py  redis_example.py  schedule_chat_and_web.py  schedule_tree_textual_memory.py  schedule_w_memos.py  scheduler_for_async_tasks.py  show_redis_status.py  task_fair_schedule.py  task_stop_rerun.py  try_schedule_modules.py
examples/mem_user/: user_manager_factory_example.py
scripts/: check_dependencies.py  export_openapi.py
src/memos/: __init__.py  cli.py  log.py  settings.py  types.py  utils.py
tests/: test_cli.py  test_deprecation.py  test_docs.py  test_hello_world.py  test_log.py  test_openapi_sync.py  test_settings.py  utils.py
tests/api/: test_product_router.py  test_server_router.py  test_start_api.py  test_thread_context.py
tests/chunkers/: test_base.py  test_factory.py  test_sentence_chunker.py
tests/configs/: test_base.py  test_embedder.py  test_llm.py  test_mem_chat.py  test_mem_cube.py  test_memory.py  test_parser.py  test_vec_db.py
tests/embedders/: test_ark.py  test_base.py  test_factory.py  test_ollama.py  test_universal_api.py
tests/graph_dbs/: graph_dbs.py
tests/llms/: test_base.py  test_deepseek.py  test_factory.py  test_hf.py  test_ollama.py  test_openai.py  test_qwen.py
tests/mem_agent/: test_deepsearch_agent.py
tests/mem_chat/: test_base.py  test_factory.py
tests/mem_cube/: test_base.py  test_general.py
tests/mem_os/: test_memos.py  test_memos_core.py
tests/mem_reader/: test.txt  test_base.py  test_coarse_memory_type.py  test_factory.py  test_memory.py  test_simple_structure.py
tests/mem_scheduler/: test_config.py  test_dispatcher.py  test_optimized_scheduler.py  test_orm.py  test_retriever.py  test_scheduler.py  test_scheduler_api.py  test_version_control.py
tests/mem_tools/: test_thread_safe_dict.py
tests/mem_user/: test_mem_user.py
tests/memories/: test_base.py  test_factory.py
tests/parsers/: test_base.py  test_factory.py  test_markitdown.py
tests/vec_dbs/: test_base.py  test_factory.py  test_item.py  test_qdrant.py
(+337 files in other folders)
